--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ button {
   letter-spacing: 0.02em;
   color: var(--main-text-color);
   text-decoration: none;
+  display: flex;
 }
 .contact-links {
   color: var(--light-gray);
@@ -151,10 +152,12 @@ color: var(--accent-color);
 .envelope-icon {
 vertical-align: middle;
 margin-right: 10px;
+fill: currentColor;
 }
 .smartphone-icon {
 vertical-align: middle;
 margin-right: 10px;
+fill: currentColor;
 }
 .contact-box {
   display: flex;
@@ -172,7 +175,10 @@ margin-right: 10px;
     ),
     url('../images/backgroundimage.jpg');
   background-repeat: no-repeat;
-  background-position: 50%;
+  background-position: center;
+  margin: 0 auto;
+  max-width: 1600px;
+
 }
 .primary-header {
   font-size: 44px;
@@ -270,22 +276,27 @@ margin-right: 10px;
   border-radius: 0px 0px 4px 4px;
 }
 .team-social-list {
-padding-left: 20px;
-padding-right: 20px;
-gap: 10px;
-display: flex;
-justify-content: space-between;
+  gap: 10px;
+  display: flex;
+  justify-content: center;
 }
 .team-social-icon {
-  fill: var(--inactive-icon-color);
-  padding: 12px;
-align-items: center;
+  fill: currentColor;
+  align-items: center;
+}
+.team-social-link {
+  width: 44px;
+  height: 44px;;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--inactive-icon-color);
 }
 .team-social-item:hover {
   background-color: var(--accent-color);
   border-radius: 50%;
 }
-.team-social-icon:hover {
+.team-social-item:hover {
   fill: var(--secondary-color);
 }
 /* End 'our team' section */
@@ -293,20 +304,27 @@ align-items: center;
 /* "Our clients' section */
 
 .client-icon {
-  fill: var(--inactive-icon-color);
+  fill: currentColor;
 }
-.client-item {
-  padding: 16px 32px;
-  border: 1px solid var(--inactive-icon-color);
-  border-radius: 4px;
+.client-icon-link {
+  width: 170px;
+  height: 92px;
+  display: flex;
   justify-content: center;
   align-items: center;
+  color: var(--inactive-icon-color);
+}
+.client-item {
+  border-radius: 4px;
+  border: 1px solid var(--inactive-icon-color);
 }
 .client-item:last-child {
   margin-right: 0;
 }
 .client-item:hover {
   border: 1px solid var(--accent-color);
+  fill: var(--accent-color);
+  border-radius: 4px;
 }
 .client-item:hover .client-icon {
   fill: var(--accent-color);
@@ -404,12 +422,15 @@ address {
 .gray-social-links {
   color: var(--secondary-color-transparent);
 }
+.footer .container {
+  display: flex;
+  align-items: baseline;
+}
 .footer-button-section {
-  margin-left: 316px;
+  margin-left: 70px;
 }
 .footer-button-section > p {
   color: var(--secondary-color);
-  font-size: 14px;
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 20px;
@@ -418,13 +439,19 @@ address {
   display: flex;
   gap: 10px;
 }
-.footer-button {
-  fill: var(--secondary-color);
+.footer-button-item {
   background-color: var(--inactive-footer-button-color);
   border-radius: 50%;
+}
+.footer-button-item {
+  width: 44px;
+  height: 44px;
   padding: 12px;
 }
-.footer-button:hover {
+.footer-button {
+  fill: var(--secondary-color);
+}
+.footer-button-item:hover {
   background-color: var(--accent-color);
 }
 /* End footer */
