--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,9 @@ body {
   font-size: 14px;
   letter-spacing: 0.03em;
 }
+a {
+  text-decoration: none;
+}
 h1,
 h2,
 h3,
@@ -124,8 +127,7 @@ button {
 .social-links:visited {
   color: inherit;
 }
-.social-links:hover,
-.map-link:hover,
+.social-links:hover, .map-link:hover,
 .gray-social-links:hover,
 .social-links:focus,
 .map-link:focus,
@@ -178,7 +180,7 @@ fill: currentColor;
   background-position: center;
   margin: 0 auto;
   max-width: 1600px;
-
+  height: 600px;
 }
 .primary-header {
   font-size: 44px;
@@ -282,7 +284,6 @@ fill: currentColor;
 }
 .team-social-icon {
   fill: currentColor;
-  align-items: center;
 }
 .team-social-link {
   width: 44px;
@@ -291,13 +292,12 @@ fill: currentColor;
   align-items: center;
   justify-content: center;
   color: var(--inactive-icon-color);
-}
-.team-social-item:hover {
-  background-color: var(--accent-color);
   border-radius: 50%;
 }
-.team-social-item:hover {
-  fill: var(--secondary-color);
+.team-social-link:hover, .team-social-link:focus {
+  background-color: var(--accent-color);
+  border-radius: 50%;
+  color: var(--secondary-color);
 }
 /* End 'our team' section */
 
@@ -321,12 +321,13 @@ fill: currentColor;
 .client-item:last-child {
   margin-right: 0;
 }
-.client-item:hover {
+ .client-item:hover, .client-item:focus {
   border: 1px solid var(--accent-color);
-  fill: var(--accent-color);
-  border-radius: 4px;
 }
 .client-item:hover .client-icon {
+  fill: var(--accent-color);
+}
+.client-icon:focus .client-icon {
   fill: var(--accent-color);
 }
 /* End 'our clients' section */
@@ -359,21 +360,33 @@ fill: currentColor;
 /* End buttons section */
 
 /* Projects section */
+.project-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+.project-link:hover, 
+.project-link:focus {
+  display: block;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .project-box {
   border-bottom: 1px var(--card-border-color) solid;
   border-top: 0;
   padding: 20px 24px;
 }
-.project-cards:hover {
+/*.project-cards:hover, .project-cards:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+}*/
 .project-names {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   margin-bottom: 4px;
+  color: var(--main-text-color);
 }
 .project-categories {
   font-size: 16px;
@@ -439,19 +452,20 @@ address {
   display: flex;
   gap: 10px;
 }
-.footer-button-item {
+.footer-button-link {
   background-color: var(--inactive-footer-button-color);
   border-radius: 50%;
-}
-.footer-button-item {
   width: 44px;
   height: 44px;
   padding: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .footer-button {
   fill: var(--secondary-color);
 }
-.footer-button-item:hover {
+.footer-button-link:hover, .footer-button-link:focus{
   background-color: var(--accent-color);
 }
 /* End footer */
